tests/golden/type_errors/array_assign_non_array.err
Type error at 2:2: can only assign array elements or map entries
  x[0] = 2;
   ^
